# Openhipp0

./: .dockerignore  .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  SECURITY.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.workspace.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  eval.yml  release.yml  supply-chain.yml
deployment/: .env.example  README.md  cloud-init.yaml  docker-compose.prod.yml  homebrew-formula.rb
deployment/do-1click/: user_data.sh
deployment/mobile-install/: README.md  SIGNING.txt  index.html
deployment/railway/: railway.toml
docs/: BUILD_PROMPT.md  DEVELOPER_HANDOFF.md  HANDOFF_PHASES_11-18.md  PHASE_3_SCOPE.md  RFC-TEMPLATE.md  api-reference.md  architecture.md  browser-automation.md  cli.md  enterprise.md  gap-closure-summary.md  getting-started.md  integrations.md  migration-from-hermes.md  migration-from-openclaw.md  mobile-install.md  security.md  self-hosting.md  skills-guide.md  training-data.md  troubleshooting.md  voice-media.md  windows.md
docs/browser/: followups.md  profile-management.md  stealth-research.md
docs/framework-guides/: autogen.md  crewai.md  langchain.md  langgraph.md  openai-agents.md
docs/security/: vulnerability-reporting.md
python-sdk/: README.md
python-sdk/openhipp0-autogen/: README.md  pyproject.toml
python-sdk/openhipp0-autogen/src/openhipp0_autogen/: __init__.py  instrument.py
python-sdk/openhipp0-autogen/tests/: test_instrument.py
python-sdk/openhipp0-crewai/: README.md  pyproject.toml
python-sdk/openhipp0-crewai/src/openhipp0_crewai/: __init__.py  instrument.py
python-sdk/openhipp0-crewai/tests/: test_instrument.py
python-sdk/openhipp0-langchain/: README.md  pyproject.toml
python-sdk/openhipp0-langchain/src/openhipp0_langchain/: __init__.py  instrument.py
python-sdk/openhipp0-langchain/tests/: test_callback.py
python-sdk/openhipp0-langgraph/: README.md  pyproject.toml
python-sdk/openhipp0-langgraph/src/openhipp0_langgraph/: __init__.py  instrument.py
python-sdk/openhipp0-langgraph/tests/: test_instrument.py
python-sdk/openhipp0-openai-agents/: README.md  pyproject.toml
python-sdk/openhipp0-openai-agents/src/openhipp0_openai_agents/: __init__.py  instrument.py
python-sdk/openhipp0-openai-agents/tests/: test_processor.py
python-sdk/openhipp0-sdk/: README.md  pyproject.toml
python-sdk/openhipp0-sdk/src/openhipp0/: __init__.py  agent.py  auto.py  client.py  errors.py  types.py
python-sdk/openhipp0-sdk/tests/: test_agent.py  test_auto.py  test_client.py  test_retro_e.py  test_types.py
scripts/: build-mobile.sh  install.ps1  install.sh  launch-checklist.sh  openhipp0.wxs  test-python.sh  turbo-server-filter.sh
skills/_template/: SKILL.md  manifest.json
skills/apple-calendar/: SKILL.md  manifest.json
skills/brave-search/: SKILL.md  manifest.json
skills/dropbox/: SKILL.md  manifest.json
skills/github/: SKILL.md  manifest.json
skills/gmail/: SKILL.md  manifest.json
skills/google-calendar/: SKILL.md  manifest.json
skills/google-drive/: SKILL.md  manifest.json
skills/home-assistant/: SKILL.md  manifest.json
skills/jira/: SKILL.md  manifest.json
skills/linear/: SKILL.md  manifest.json
skills/mattermost/: SKILL.md  manifest.json
skills/notion/: SKILL.md  manifest.json
skills/obsidian/: SKILL.md  manifest.json
skills/outlook/: SKILL.md  manifest.json
skills/philips-hue/: SKILL.md  manifest.json
skills/spotify/: SKILL.md  manifest.json
skills/todoist/: SKILL.md  manifest.json
skills/trello/: SKILL.md  manifest.json
skills/twilio-sms/: SKILL.md  manifest.json
