[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhipp0-crewai"
version = "0.0.0"
description = "CrewAI integration for Open Hipp0 — record decisions and session traces from CrewAI crews."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["openhipp0-sdk>=0.0.0"]
# crewai itself is a peer dependency — the integration only imports it lazily.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openhipp0_crewai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
