[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhipp0-langgraph"
version = "0.0.0"
description = "LangGraph integration for Open Hipp0 — persist graph checkpoints + decisions into hipp0 memory."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["openhipp0-sdk>=0.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30"]

[tool.hatch.build.targets.wheel]
packages = ["src/openhipp0_langgraph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
