[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhipp0-sdk"
version = "0.0.0"
description = "Python SDK for Open Hipp0 — the local-first autonomous AI agent platform."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Open Hipp0 contributors" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/openhipp0/openhipp0"
Repository = "https://github.com/openhipp0/openhipp0"
Issues = "https://github.com/openhipp0/openhipp0/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openhipp0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
